--- a/src/PortfolioContainer/Home/Profile/Profile.css
+++ b/src/PortfolioContainer/Home/Profile/Profile.css
@@ -18,6 +18,7 @@
   padding-left: 0px;
   transform: scale(1.1);
   transition: 0.3s ease-in-out;
+  cursor: pointer;
 }
 .colz .colz-icon label:hover {
   transform: scale(2);
