--- a/src/PortfolioContainer/ContactMe/ContactInfoCard/ContactInfoCard.css
+++ b/src/PortfolioContainer/ContactMe/ContactInfoCard/ContactInfoCard.css
@@ -40,6 +40,7 @@
   color: azure;
   opacity: 0.94;
   transition: 0.3s ease-in-out;
+  cursor: pointer;
 }
 .contact-info-icons .contact-info-icon label:hover {
   color: rgb(169, 254, 254);
